RESOLVED FIXED235254
REGRESSION: ARKit example loads a page full of random symbols instead of a 3D model
https://bugs.webkit.org/show_bug.cgi?id=235254
Summary REGRESSION: ARKit example loads a page full of random symbols instead of a 3...
Dean Jackson
Reported 2022-01-14 14:43:09 PST
REGRESSION: ARKit example loads a page full of random symbols instead of a 3D model
Attachments
Patch (4.41 KB, patch)
2022-01-14 14:46 PST, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2022-01-14 14:44:06 PST
Dean Jackson
Comment 2 2022-01-14 14:46:58 PST
Dean Jackson
Comment 3 2022-01-14 14:59:07 PST
Note You need to log in before you can comment on or make changes to this bug.